adding LED_POWER node to nice nano v2 dts, later needs to be moved to config repository
Co-authored-by: Tworck <Tworck@users.noreply.github.com>

--- a/app/boards/arm/nice_nano/nice_nano_v2.dts
+++ b/app/boards/arm/nice_nano/nice_nano_v2.dts
@@ -19,7 +19,19 @@
         init-delay-ms = <50>;
     };
 
+    // Node name must match original "EXT_POWER" label to preserve user settings.
+    LED_POWER {
+        compatible = "zmk,ext-power-generic";
+        control-gpios = <&gpio0 13 GPIO_ACTIVE_HIGH>;
+        init-delay-ms = <50>;
+    };
+
     vbatt: vbatt {
         compatible = "zmk,battery-nrf-vddh";
     };
 };
+    led_power: LED_POWER {
+        compatible = "zmk,ext-power-generic";
+        control-gpios = <&gpio0 13 GPIO_ACTIVE_HIGH>;
+        init-delay-ms = <50>;
+    };
