--- a/app/dts/bindings/behaviors/zmk,behavior-ext-power.yaml
+++ b/app/dts/bindings/behaviors/zmk,behavior-ext-power.yaml
@@ -5,4 +5,4 @@ description: External power control Behavior
 
 compatible: "zmk,behavior-ext-power"
 
-include: two_param.yaml
+include: one_param.yaml
