--- a/app/dts/behaviors/ext_power.dtsi
+++ b/app/dts/behaviors/ext_power.dtsi
@@ -7,7 +7,7 @@
 / {
     behaviors {
         // Behavior can be invoked on peripherals, so name must be <= 8 characters.
-        ext_power: extpower {
+        ext_power: EXT_POWER {
             compatible = "zmk,behavior-ext-power";
             #binding-cells = <1>;
         };
