modify ext_power behavior to have an additional property power-node-name that specifies the name of the ext-power-generic node that should be used
Co-authored-by: Tworck <Tworck@users.noreply.github.com>

--- a/app/dts/bindings/behaviors/zmk,behavior-ext-power.yaml
+++ b/app/dts/bindings/behaviors/zmk,behavior-ext-power.yaml
@@ -6,3 +6,8 @@ description: External power control Behavior
 compatible: "zmk,behavior-ext-power"
 
 include: one_param.yaml
+
+properties:
+  power-node-name:
+    type: string
+    required: true
