switch behavior to toggle RGB_PWR, revert nice_nano_v2.dts

--- a/app/dts/behaviors/ext_power.dtsi
+++ b/app/dts/behaviors/ext_power.dtsi
@@ -10,7 +10,7 @@
         ext_power: extpower {
             compatible = "zmk,behavior-ext-power";
             #binding-cells = <1>;
-            power-node-name = "FOO_BAR";
+            power-node-name = "RGB_PWR";
         };
     };
 };
