remove ext_power from behavior to test  defining it in tukon

--- a/app/dts/behaviors/ext_power.dtsi
+++ b/app/dts/behaviors/ext_power.dtsi
@@ -7,10 +7,10 @@
 / {
     behaviors {
         // Behavior can be invoked on peripherals, so name must be <= 8 characters.
-        ext_power: extpower {
-            compatible = "zmk,behavior-ext-power";
-            #binding-cells = <1>;
-            power-node-name = "RGB_PWR";
-        };
+        // ext_power: extpower {
+        //     compatible = "zmk,behavior-ext-power";
+        //     #binding-cells = <1>;
+        //     power-node-name = "RGB_PWR";
+        // };
     };
 };
