--- a/app/boards/arm/nice_nano/nice_nano_v2.dts
+++ b/app/boards/arm/nice_nano/nice_nano_v2.dts
@@ -13,11 +13,11 @@
     };
 
     // Node name must match original "EXT_POWER" label to preserve user settings.
-    EXT_POWER {
-        compatible = "zmk,ext-power-generic";
-        control-gpios = <&gpio0 13 GPIO_ACTIVE_HIGH>;
-        init-delay-ms = <50>;
-    };
+    // EXT_POWER {
+    //     compatible = "zmk,ext-power-generic";
+    //     control-gpios = <&gpio0 13 GPIO_ACTIVE_HIGH>;
+    //     init-delay-ms = <50>;
+    // };
 
     vbatt: vbatt {
         compatible = "zmk,battery-nrf-vddh";
