--- a/app/dts/behaviors/ext_power.dtsi
+++ b/app/dts/behaviors/ext_power.dtsi
@@ -6,11 +6,11 @@
 
 / {
     behaviors {
-        // Behavior can be invoked on peripherals, so name must be <= 8 characters.
-        // ext_power: extpower {
-        //     compatible = "zmk,behavior-ext-power";
-        //     #binding-cells = <1>;
-        //     power-node-name = "RGB_PWR";
-        // };
+        Behavior can be invoked on peripherals, so name must be <= 8 characters.
+        ext_power: extpower {
+            compatible = "zmk,behavior-ext-power";
+            #binding-cells = <1>;
+            power-node-name = "EXT_POWER";
+        };
     };
 };
