recomment actual comment...
Co-authored-by: Tworck <Tworck@users.noreply.github.com>

--- a/app/dts/behaviors/ext_power.dtsi
+++ b/app/dts/behaviors/ext_power.dtsi
@@ -6,7 +6,7 @@
 
 / {
     behaviors {
-        Behavior can be invoked on peripherals, so name must be <= 8 characters.
+        // Behavior can be invoked on peripherals, so name must be <= 8 characters.
         ext_power: extpower {
             compatible = "zmk,behavior-ext-power";
             #binding-cells = <1>;
