test whether oled power pin works in ext_power
Co-authored-by: Tworck <Tworck@users.noreply.github.com>

--- a/app/dts/behaviors/ext_power.dtsi
+++ b/app/dts/behaviors/ext_power.dtsi
@@ -10,7 +10,7 @@
         ext_power: extpower {
             compatible = "zmk,behavior-ext-power";
             #binding-cells = <1>;
-            power-node-name = "EXT_POWER";
+            power-node-name = "OLED_PWR";
         };
     };
 };
